# command-line-rust

./: .gitignore  README.md
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
false/: Cargo.toml
false/tests/: cli.rs
hello/tests/: cli.rs
true/: Cargo.toml
true/tests/: cli.rs
