[package]
name = "catr"
version = "0.1.0"
edition = "2021"
authors = ["RayDarar"]
description = "A simple cat command implementation in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.5"
